# dabber

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/bench/: ATTRIBUTION.txt  refs.json
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/dabber/: MainActivity.kt
app/src/main/java/com/dabber/a11y/: InsertionService.kt
app/src/main/java/com/dabber/asr/: WhisperEngine.kt
app/src/main/java/com/dabber/audio/: AudioRecorder.kt  WavReader.kt
app/src/main/java/com/dabber/bench/: BenchmarkActivity.kt  BenchmarkRunner.kt  HebrewWer.kt  ModelVariants.kt
app/src/main/java/com/dabber/core/: DictationCore.kt
app/src/main/res/drawable/: bg_hero.xml  bg_scratch.xml  bubble_bg.xml  ic_accessibility.xml  ic_chat.xml  ic_graphic_eq.xml  ic_launcher.xml  ic_layers.xml  ic_speed.xml
app/src/main/res/layout/: activity_benchmark.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
benchmark/: convert_to_ggml.py  datasets.py  metrics.py  models.py  normalize_he.py  run_benchmark.py  validate_ggml.py
benchmark/results/: results.json
benchmark/tests/: test_metrics.py  test_normalize_he.py
docs/: qa-fix-plan.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md
docs/benchmarks/: hebrew-asr-2026-06-29.md
docs/ci/: android.yml
docs/superpowers/plans/: 2026-06-29-hebrew-asr-benchmark.md
docs/superpowers/specs/: 2026-06-29-dabber-hebrew-dictation-design.md
gradle/: libs.versions.toml
models/: dabber-he-q5_0.bin.sha256  dabber-he.bin.sha256  dabber_device.txt  device_user.txt  device_user_avx2.txt  device_user_final.txt  full_log.txt  full_log2.txt  ref0000.txt  user_transcript.txt
scripts/: extract_fix.py  npu_compile.py
(+12 files in other folders)
